# C-

./: README.md
 Multithreaded LLM Inference Wrapper in C++/: lama.cpp
Axum-based Web API/: cargo.toml
Axum-based Web API /src/: main.rs
Multithreaded LLM Inference Wrappe_C++/: CMakeLists.txt  how_to_run.txt  llama_wrapper.cpp  llama_wrapper.h  main.cpp
Real-Time Object Detection with OpenCV/: CMakeLists.txt
Real-Time Object Detection with OpenCV/include/: detector.h
Real-Time Object Detection with OpenCV/src/: detector.cpp  how_to_run.txt  main.cpp
open_cv/: main.cpp
